--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
     <div class="caption v-middle text-center" id="discourd" name="discourd">
         <h1 style="margin: 5rem; font-size: 5rem;">Erreur 404</h1>
         <h2 style="font-size: 2rem;">Il semblerait que la page recherchée n'existe pas.</h2>
-        <h3 style="font-size: 1.75rem; margin-bottom: 8em;">Voulez vous retourner à la <a href="index.html">page principale</a> ?</h3>
+        <h3 style="font-size: 1.75rem; margin-bottom: 8em;">Voulez vous retourner à la <a href="https://uty-bot.xyz/index.html">page principale</a> ?</h3>
 	</div>
     
     <div class="footer-dark">
