--- a/404.html
+++ b/404.html
@@ -27,12 +27,12 @@
 <body style="background-image: url(&quot;assets/img/Calque%202.png&quot;);background-color: #252628;">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="#"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="https://uty-bot.xyz"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto" style="margin-top:13px;">
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="remerciements.html">Remerciements</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="index.html#staff-container">Staff</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="index.html#discourd">Discord</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="https://uty-bot.xyz/remerciements.html">Remerciements</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="https://uty-bot.xyz/index.html#staff-container">Staff</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="https://uty-bot.xyz/index.html#discourd">Discord</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link bg-primary border rounded border-primary" uk-scroll="offset:50" style="color: #ffffff;background-color: rgb(203,203,203);" href="/panel/index.php">Panel</a></li>
                 </ul>
         </div>
@@ -51,19 +51,19 @@
                     <div class="col-sm-6 col-md-3 item">
                         <h3>Plan du site</h3>
                         <ul>
-                            <li><a href="#discourd">Accueil</a></li>
-                            <li><a href="remerciements.html">Remerciements</a></li>
-                            <li><a href="#staff-container">Staff</a></li>
-                            <li><a href="#discourd">Discord</a></li>
-                            <li><a href="/panel/index.php">Panel</a></li>
+                            <li><a href="https://uty-bot.xyz/#discourd">Accueil</a></li>
+                            <li><a href="https://uty-bot.xyz/remerciements.html">Remerciements</a></li>
+                            <li><a href="https://uty-bot.xyz/#staff-container">Staff</a></li>
+                            <li><a href="https://uty-bot.xyz/#discourd">Discord</a></li>
+                            <li><a href="#">Panel</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3 item">
                         <h3>À propos</h3>
                         <ul>
-                            <li><a href="#discourd">Ajoutez Uty&nbsp;</a></li>
-                            <li><a href="#staff-container">Staff</a></li>
-                            <li><a href="#">Qui nous sommes?</a></li>
+                            <li><a href="https://uty-bot.xyz/#discourd">Ajoutez Uty&nbsp;</a></li>
+                            <li><a href="https://uty-bot.xyz/#staff-container">Staff</a></li>
+                            <li><a href="https://uty-bot.xyz/#">Qui nous sommes?</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 item text">
@@ -72,7 +72,7 @@
                     </div>
                     <div class="col item social"><a href="https://discord.gg/Vn57npQ" target="_blank"><i class="fab fa-discord"></i></a><a href="https://t.me/enertix" target="_blank"><i class="fab fa-telegram-plane"></i></a></div>
                 </div>
-                <p class="copyright"><a href="mentions-legales.html">Mentions Légales</a> - Uty-Bot.xyz © 2020</p>
+                <p class="copyright"><a href="https://uty-bot.xyz/mentions-legales.html">Mentions Légales</a> - Uty-Bot.xyz © 2020</p>
                 <p class="copyright"></p>
             </div>
         </footer>
