--- a/remerciements.html
+++ b/remerciements.html
@@ -35,7 +35,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="index.html">Accueil</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="index.html#staff-container">Staff</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="index.html">Discord</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link bg-primary border rounded border-primary" uk-scroll="offset:50" style="color: #ffffff;background-color: rgb(203,203,203);" href="/panel/index.php">Panel</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link bg-primary border rounded border-primary" uk-scroll="offset:50" style="color: #ffffff;background-color: rgb(203,203,203);" href="#">Panel</a></li>
                 </ul>
         </div>
         </div>
