--- a/remerciements.html
+++ b/remerciements.html
@@ -28,13 +28,13 @@
 <body style="background-color: rgb(27,27,27);background-image: url(&quot;assets/img/Calque%202.png&quot;);">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="index.html"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="https://uty-bot.xyz"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto" style="margin-top:13px;">
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="index.html">Accueil</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="index.html#staff-container">Staff</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="index.html">Discord</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="https://uty-bot.xyz">Accueil</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="https://uty-bot.xyz#staff-container">Staff</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="https://uty-bot.xyz">Discord</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link bg-primary border rounded border-primary" uk-scroll="offset:50" style="color: #ffffff;background-color: rgb(203,203,203);" href="#">Panel</a></li>
                 </ul>
         </div>
@@ -75,19 +75,19 @@
                     <div class="col-sm-6 col-md-3 item">
                         <h3>Plan du site</h3>
                         <ul>
-                            <li><a href="index.html">Accueil</a></li>
+                            <li><a href="https://uty-bot.xyz">Accueil</a></li>
                             <li><a href="remerciements.html">Remerciements</a></li>
-                            <li><a href="index.html#staff-container">Staff</a></li>
-                            <li><a href="index.html">Discord</a></li>
+                            <li><a href="https://uty-bot.xyz#staff-container">Staff</a></li>
+                            <li><a href="https://uty-bot.xyz">Discord</a></li>
                             <li><a href="/panel/index.php">Panel</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3 item">
                         <h3>À propos</h3>
                         <ul>
-                            <li><a href="index.html#discourd">Ajoutez Uty&nbsp;</a></li>
-                            <li><a href="index.html#staff-container">Staff</a></li>
-                            <li><a href="index.html">Qui nous sommes?</a></li>
+                            <li><a href="https://uty-bot.xyz#discourd">Ajoutez Uty&nbsp;</a></li>
+                            <li><a href="https://uty-bot.xyz#staff-container">Staff</a></li>
+                            <li><a href="https://uty-bot.xyz">Qui nous sommes?</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 item text">
