--- a/remerciements.html
+++ b/remerciements.html
@@ -76,7 +76,7 @@
                         <h3>Plan du site</h3>
                         <ul>
                             <li><a href="https://uty-bot.xyz">Accueil</a></li>
-                            <li><a href="remerciements.html">Remerciements</a></li>
+                            <li><a href="https://uty-bot.xyz/remerciements">Remerciements</a></li>
                             <li><a href="https://uty-bot.xyz#staff-container">Staff</a></li>
                             <li><a href="https://uty-bot.xyz">Discord</a></li>
                             <li><a href="/panel/index.php">Panel</a></li>
