--- a/remerciements.html
+++ b/remerciements.html
@@ -79,7 +79,7 @@
                             <li><a href="https://uty-bot.xyz/remerciements">Remerciements</a></li>
                             <li><a href="https://uty-bot.xyz#staff-container">Staff</a></li>
                             <li><a href="https://uty-bot.xyz">Discord</a></li>
-                            <li><a href="/panel/index.php">Panel</a></li>
+                            <li><a href="https://uty-bot.xyz/panel/index">Panel</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3 item">
