--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -28,13 +28,13 @@
 <body style="background-image: url(&quot;assets/img/Calque%202.png&quot;);background-color: #ffffff; text-align: center;">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="index.html"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="https://uty-bot.xyz"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto" style="margin-top:13px;">
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="remerciements.html">Remerciements</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="index.html#staff-container">Staff</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="index.html#discourd">Discord</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="https://uty-bot.xyz/remerciements">Remerciements</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="https://uty-bot.xyz#staff-container">Staff</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="https://uty-bot.xyz#discourd">Discord</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link bg-primary border rounded border-primary" uk-scroll="offset:50" style="color: #ffffff;background-color: rgb(203,203,203);" href="#">Panel</a></li>
                 </ul>
         </div>
