--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -94,7 +94,7 @@
 <h3>11. Lexique.</h3>
 <p>Utilisateur : Internaute se connectant, utilisant le site susnommé.</p>
 <p>Bot : Programme informatique executant différentes actions automatiquement.</p>
-<p>Discord: Réseau social de télécommunication appartenant à <a href="discord.com" target="_blank">Discord</a></p>
+<p>Discord: Réseau social de télécommunication appartenant à <a href="https://discord.com" target="_blank">Discord</a></p>
 <p>Staff : Équipe travaillant sur Uty</p>
 <p></p>
 <p>Informations personnelles : « les informations qui permettent, sous quelque forme que ce soit, directement ou non, l'identification des personnes physiques auxquelles elles s'appliquent » (article 4 de la loi n° 78-17 du 6 janvier 1978).</p>
