--- a/404.html
+++ b/404.html
@@ -8,75 +8,29 @@
     <meta property="og:type" content="website">
     <meta name="description" content="Uty est un bot Discord multifonctions totalement gratuit, simple, rapide et indépendant. ">
     <meta name="" content="">
-    <meta property="og:image" content="assets/img/Uty_Blurple.png">
-    <meta name="twitter:image" content="assets/img/Uty_Blurple.png">
+    <meta property="og:image" content="https://uty-bot.xyz/assets/img/Uty_Blurple.png">
+    <meta name="twitter:image" content="https://uty-bot.xyz/assets/img/Uty_Blurple.png">
     <meta name="twitter:title" content="Uty - Le bot Discord multifonctions!">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Animated-Type-Heading.css">
-    <link rel="stylesheet" href="assets/css/dh-navbar-inverse.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/Team-Boxed.css">
-    <link rel="stylesheet" href="assets/css/Team-Clean.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Animated-Type-Heading.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/dh-navbar-inverse.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/styles.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Team-Boxed.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Team-Clean.css">
 <script data-dapp-detection="">(function(){let e=!1;function n(){if(!e){const n=document.createElement("meta");n.name="dapp-detected",document.head.appendChild(n),e=!0}}if(window.hasOwnProperty("ethereum")){if(window.__disableDappDetectionInsertion=!0,void 0===window.ethereum)return;n()}else{var t=window.ethereum;Object.defineProperty(window,"ethereum",{configurable:!0,set:function(e){window.__disableDappDetectionInsertion||n(),t=e},get:function(){return window.__disableDappDetectionInsertion||n(),t}})}})();</script>
 </head>
 
-<body style="background-image: url(&quot;assets/img/Calque%202.png&quot;);background-color: #252628;">
-    <nav class="navbar navbar-light navbar-expand-md navigation-clean navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="https://uty-bot.xyz"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto" style="margin-top:13px;">
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="https://uty-bot.xyz/remerciements.html">Remerciements</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="https://uty-bot.xyz/index.html#staff-container">Staff</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="https://uty-bot.xyz/index.html#discourd">Discord</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link bg-primary border rounded border-primary" uk-scroll="offset:50" style="color: #ffffff;background-color: rgb(203,203,203);" href="#">Panel</a></li>
-                </ul>
-        </div>
-        </div>
-    </nav>				
+<body style="background-image: url(&quot;https://uty-bot.xyz/assets/img/Calque%202.png&quot;);background-color: #252628;">		
     <div class="caption v-middle text-center" id="discourd" name="discourd">
         <h1 style="margin: 5rem; font-size: 5rem;">Erreur 404</h1>
         <h2 style="font-size: 2rem;">Il semblerait que la page recherchée n'existe pas.</h2>
-        <h3 style="font-size: 1.75rem; margin-bottom: 8em;">Voulez vous retourner à la <a href="https://uty-bot.xyz/index.html">page principale</a> ?</h3>
+        <h3 style="font-size: 1.75rem; margin-bottom: 8em;">Voulez vous retourner à la <a href="https://uty-bot.xyz/">page principale</a> ?</h3>
 	</div>
     
-    <div class="footer-dark">
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>Plan du site</h3>
-                        <ul>
-                            <li><a href="https://uty-bot.xyz/#discourd">Accueil</a></li>
-                            <li><a href="https://uty-bot.xyz/remerciements.html">Remerciements</a></li>
-                            <li><a href="https://uty-bot.xyz/#staff-container">Staff</a></li>
-                            <li><a href="https://uty-bot.xyz/#discourd">Discord</a></li>
-                            <li><a href="#">Panel</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>À propos</h3>
-                        <ul>
-                            <li><a href="https://uty-bot.xyz/#discourd">Ajoutez Uty&nbsp;</a></li>
-                            <li><a href="https://uty-bot.xyz/#staff-container">Staff</a></li>
-                            <li><a href="https://uty-bot.xyz/#">Qui nous sommes?</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 item text">
-                        <h3>Uty</h3>
-                        <p><strong>Uty est un bot</strong> Discord <strong>indépendant</strong> comme but d'être le <strong>couteau suisse</strong> des bots Discord.</p>
-                    </div>
-                    <div class="col item social"><a href="https://discord.gg/Vn57npQ" target="_blank"><i class="fab fa-discord"></i></a><a href="https://t.me/enertix" target="_blank"><i class="fab fa-telegram-plane"></i></a></div>
-                </div>
-                <p class="copyright"><a href="https://uty-bot.xyz/mentions-legales.html">Mentions Légales</a> - Uty-Bot.xyz © 2020</p>
-                <p class="copyright"></p>
-            </div>
-        </footer>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 
