--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:type" content="website">
     <meta name="description" content="Uty est un bot Discord multifonctions totalement gratuit, simple, rapide et indépendant. ">
     <meta name="" content="">
-    <meta property="og:image" content="assets/img/Uty_Blurple.png">
-    <meta name="twitter:image" content="assets/img/Uty_Blurple.png">
+    <meta property="og:image" content="https://uty-bot.xyz/assets/img/Uty_Carre_Blurple.png">
+    <meta name="twitter:image" content="https://uty-bot.xyz/assets/img/Uty_Carre_Blurple.png">
     <meta name="twitter:title" content="Uty - Le bot Discord multifonctions!">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
