--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -10,25 +10,25 @@
     <meta property="og:type" content="website">
     <meta name="description" content="Uty est un bot Discord multifonctions totalement gratuit, simple, rapide et indépendant. ">
     <meta name="" content="">
-    <meta property="og:image" content="assets/img/Uty_Blurple.png">
-    <meta name="twitter:image" content="assets/img/Uty_Blurple.png">
+    <meta property="og:image" content="https://uty-bot.xyz/assets/img/Uty_Blurple.png">
+    <meta name="twitter:image" content="https://uty-bot.xyz/assets/img/Uty_Blurple.png">
     <meta name="twitter:title" content="Uty - Le bot Discord multifonctions!">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Animated-Type-Heading.css">
-    <link rel="stylesheet" href="assets/css/dh-navbar-inverse.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/Team-Boxed.css">
-    <link rel="stylesheet" href="assets/css/Team-Clean.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Animated-Type-Heading.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/dh-navbar-inverse.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/styles.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Team-Boxed.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Team-Clean.css">
 </head>
 
-<body style="background-image: url(&quot;assets/img/Calque%202.png&quot;);background-color: #ffffff; text-align: center;">
+<body style="background-image: url(&quot;https://uty-bot.xyz/assets/img/Calque%202.png&quot;);background-color: #ffffff; text-align: center;">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="https://uty-bot.xyz"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="https://uty-bot.xyz"> <img class="img-fluid" src="https://uty-bot.xyz/assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto" style="margin-top:13px;">
