--- a/remerciements.html
+++ b/remerciements.html
@@ -16,19 +16,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Animated-Type-Heading.css">
-    <link rel="stylesheet" href="assets/css/dh-navbar-inverse.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/Team-Boxed.css">
-    <link rel="stylesheet" href="assets/css/Team-Clean.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Animated-Type-Heading.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/dh-navbar-inverse.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/styles.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Team-Boxed.css">
+    <link rel="stylesheet" href="https://uty-bot.xyz/assets/css/Team-Clean.css">
 </head>
 
-<body style="background-color: rgb(27,27,27);background-image: url(&quot;assets/img/Calque%202.png&quot;);">
+<body style="background-color: rgb(27,27,27);background-image: url(&quot;https://uty-bot.xyz/assets/img/Calque%202.png&quot;);">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="https://uty-bot.xyz"> <img class="img-fluid" src="assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+            <div><a class="navbar-brand" style="padding:0px;margin-left:0px;height:78px;" href="https://uty-bot.xyz"> <img class="img-fluid" src="https://uty-bot.xyz/assets/img/Uty_Blurple.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto" style="margin-top:13px;">
@@ -59,7 +59,7 @@
                     <p class="description">Derp est LE plus grand donateur d'Uty! Grâce à lui, nous pouvons payer l'hébergeur d'Uty (qui est sacrément energivore ce coquin!).&nbsp;</p>
                     <div class="social"><a href="https://github.com/derpinou" target="_blank"><i class="fa fa-github"></i></a></div>
                 </div>
-                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/b65bf3d7305b6a2be9b2ab301c8b5b92.png">
+                <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="https://uty-bot.xyz/assets/img/b65bf3d7305b6a2be9b2ab301c8b5b92.png">
                     <h3 class="name">Androz2091</h3>
                     <p class="title">Développeur&nbsp;</p>
                     <p class="description">Créateur d'Atlanta, Androz nous a aidé tout au long du projet d'Uty. Nous le remercions infiniment&nbsp;<i class="fa fa-heart"></i>.</p>
@@ -102,7 +102,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/Animated-Type-Heading.js"></script>
+    <script src="https://uty-bot.xyz/assets/js/Animated-Type-Heading.js"></script>
 </body>
 
 </html>
