--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="caption v-middle text-center" id="discourd" name="discourd">
                     <br />                    
                     <br />
-					<h1 class="cd-headline clip" user-select: none>
+					<h1 class="cd-headline clip">
 			            <span class="blc">Uty. Le bot </span>
 			            <span class="cd-words-wrapper">
 			              <b class="is-visible"> Multifonctions.</b>
