--- a/discord.html
+++ b/discord.html
@@ -1,10 +1,10 @@
 <meta http-equiv="refresh" content="0;URL=https://discord.gg/FmyzBgj"> 
 <meta charset="utf-8">
-<title>Uty • uty-bot.xyz</title>
+<title>Uty Discord Server</title>
 <meta name="twitter:description" content="Uty. Bot Discord Multifonctions, simple, rapide, efficace et indépendant.">
 <meta name="twitter:card" content="summary">
 <meta property="og:type" content="website">
 <meta name="description" content="Uty est un bot Discord multifonctions totalement gratuit, simple, rapide et indépendant. ">
 <meta property="og:image" content="https://uty-bot.xyz/assets/img/Uty_Carre_Blurple.png">
 <meta name="twitter:image" content="https://uty-bot.xyz/assets/img/Uty_Carre_Blurple.png">
-<meta name="twitter:title" content="Uty • uty-bot.xyz">
+<meta name="twitter:title" content="Uty Discord Server">
