--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                             <li><a href="https://uty-bot.xyz/#discourd">Accueil</a></li>
                             <li><a href="https://uty-bot.xyz/remerciements">Remerciements</a></li>
                             <li><a href="https://uty-bot.xyz/#staff-container">Staff</a></li>
-                            <li><a href="https://uty-bot.xyz/#discourd">Discord</a></li>
+                            <li><a href="https://uty-bot.xyz/discord">Discord</a></li>
                             <li><a href="#">Panel</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3 item">
                         <h3>À propos</h3>
                         <ul>
-                            <li><a href="https://uty-bot.xyz/#discourd">Ajoutez Uty&nbsp;</a></li>
+                            <li><a href="https://uty-bot.xyz/#discourd">Ajouter Uty&nbsp;</a></li>
                             <li><a href="https://uty-bot.xyz/#staff-container">Staff</a></li>
                             <li><a href="https://uty-bot.xyz/#">Qui nous sommes?</a></li>
                         </ul>
