--- a/remerciements.html
+++ b/remerciements.html
@@ -34,7 +34,7 @@
                 <ul class="nav navbar-nav ml-auto" style="margin-top:13px;">
                     <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:50" style="color: #ffffff;" href="https://uty-bot.xyz">Accueil</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" style="color: rgb(255,255,255);" href="https://uty-bot.xyz#staff-container">Staff</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="https://uty-bot.xyz">Discord</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" uk-scroll="offset:100" href="https://uty-bot.xyz/discord">Discord</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link bg-primary border rounded border-primary" uk-scroll="offset:50" style="color: #ffffff;background-color: rgb(203,203,203);" href="#">Panel</a></li>
                 </ul>
         </div>
